--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^8.5.2",
+    "@babel/core": "^7.23.3",
+    "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-scroll": "^1.8.9",
+    "react-icons": "^4.12.0",
+    "react-scroll": "^1.9.0",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.0.0"
+    "vite": "^5.0.2"
   }
 }
