--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "postcss-nesting": "^12.0.1",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.2"
   }
